<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ThemeClub</string>
    <string name="homepage_title">homepage</string>
    <string name="theme_title">theme</string>
    <string name="lockscreen_title">lockscreen</string>
    <string name="wallpaper_title">wallpaper</string>
    <string name="individual_title">individual</string>
    <string name="font_title">font</string>
    <string name="hot_resource">hot</string>
    <string name="newest">newest</string>
    <string name="good">quantity</string>
    <string name="popular">popular</string>
    <string-array name="category">
        <item>theme</item>
        <item>lockscreen</item>
        <item>wallpaper</item>
        <item>other</item>
    </string-array>
    <string name="theme_detail">theme details</string>
    <string name="apply">apply</string>
    <string name="theme_in_use">theme in use</string>
    <string name="yes_or_no">sure to delete?</string>
    <string name="cancel">cancel</string>
    <string name="share">share</string>
    <string name="in_use">in use</string>
    <string name="homepage">homepage</string>
    <string name="theme">theme</string>
    <string name="lockscreen">lockscreen</string>
    <string name="wallpaper">wallpaper</string>
    <string name="font_name_default">default</string>
    <string name="font_name_unknow">unknow</string>
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="freeme_font_preview_cn">Freeme OS</string>
    <string name="freeme_font_preview_en">Freedom，from here</string>
    <string name="dido_font_preview_cn">dido OS</string>
    <string name="dido_font_preview_en">Freedom，from here</string>
    <string name="deleting">deleting</string>
    <string name="designer">designer：</string>
    <string name="download_times">download times</string>
    <string name="res_intro">introduce</string>
    <string name="you_like">what you like</string>
    <string name="hint">hint</string>
    <string name="whether_continue">use mobile data will generate cost, whether to continue？</string>
    <string name="no_show">not show again</string>
    <string name="set_wlan">set wlan</string>
    <string name="go_on">continue</string>
    <string name="check_wlan">check wlan</string>
    <string name="go_to_set">set wlan</string>
    <string name="set">set</string>
    <string name="sponsor">Cool, a way of life.</string>
    <string name="seven_day_theme">seven themes</string>
    <string name="not_enough_seven">local theme is less than seven, so the 7 theme cannot be open.</string>
    <string name="special_wallpaper">special wallpaper</string>
    <string name="album">album</string>
    <string name="load_font">load font</string>
    <string name="lockscreen_detail">lockscreen detail</string>
    <string name="no_name">unknow</string>
    <string-array name="wallpaper_use">
        <item>apply to desktop</item>
        <item>apply to lockscreen</item>
        <item>apply to both</item>
        <item>crop</item>
    </string-array>
    <string name="theme_changing_dialog_title">applying</string>
    <string name="theme_changed_message">apply%1$ssuccess</string>
    <string name="theme_changed_failed_message">apply%1$sfail</string>
    <string name="theme_description_title_default">default</string>
    <string name="theme_description_title_customized">customized</string>
    <string name="theme_component_title_wallpaper">desktop wallpaper</string>
    <string name="theme_component_title_lockwallpaper">lockscreen wallpaper</string>
    <string name="theme_component_title_icon">icon</string>
    <string name="theme_component_title_lockstyle">lockstyle</string>
    <string name="theme_component_title_launcher">launcher</string>
    <string name="theme_component_title_photo_frame">photo frame</string>
    <string name="theme_component_title_others">other</string>
    <string name="apply_theme_no_select_message">please select a module</string>
    <string name="apply_lockscreen_paper_tips">Currently using is a variety lock screen, the new lockscreen wallpaper may not be seen.</string>
    <string name="theme_import">import from SD card</string>
    <string name="theme_select_others">select from other application</string>
    <string name="third_party_pickers_activity_title">set%1$s</string>
    <string name="lockstyle_personal_settings">customize current lockscreen</string>
    <string name="component_lockstyle_personal_title">customize personal current lockscreen</string>
    <string name="wallpaper_settings">wallpaper settings</string>
    <string name="desktop_wallpaper">desktop wallpaper</string>
    <string name="live_wallpaper">live wallpaper</string>
    <string name="video_wallpaper">video wallpaper</string>
    <string name="lockscreen_wallpaper">lockscreen wallpaper</string>
    <string name="change_wallpaper">cahnge wallpaper</string>
    <string name="component_select_title">selected module(%1$s)</string>
    <string name="component_include_title">including module(%1$s)</string>
    <string name="component_screen_title">including supporting wallpaper</string>
    <string name="resource_fail_to_show">this theme has no appropriate resource.</string>
    <string name="wrong_title">something wrong happened</string>
    <string name="title_local">local</string>
    <string name="title_online">online</string>
    <string name="title_system_resource">system</string>
    <string name="title_download_resource">download</string>
    <string name="short_ringtone_resource">short ringtone(&amp;lt;5seconds)</string>
    <string name="resource_preview">preview</string>
    <string name="wallpaper_set_as_both">apply to both</string>
    <string name="wallpaper_set_as_destop">apply to desktop </string>
    <string name="wallpaper_set_as_lockscreen">apply to lockscreen</string>
    <string name="wallpaper_crop">crop</string>
    <string name="wallpaper_loading_text">loading wallpaper ...</string>
    <string name="wallpaper_decoded_error">wallpaper decoded error</string>
    <string name="close">close</string>
    <string name="download_success">download success</string>
    <string name="resource_apply">apply</string>
    <string name="resource_download">download</string>
    <string name="resource_transparent_wallpaper">transparent wallpaper</string>
    <string name="description_unknown">unknow</string>
    <string name="description_missed">none</string>
    <string name="description_designer">designer：</string>
    <string name="description_author">author：</string>
    <string name="description_size">size：</string>
    <string name="description_uploadtime">uploadtime：</string>
    <string name="description_download">download times：</string>
    <string name="description_version">version：</string>
    <string name="description_file">file name：</string>
    <string name="description_dimension">dimension：</string>
    <string name="resource_title">detail</string>
    <string name="refresh">refresh</string>
    <string name="description_name">wallpaper name：</string>
    <string name="wallpaper_sort">sort：</string>
    <string name="wallpaper_all">all</string>
    <string name="wallpaper_style_scenery">scenery</string>
    <string name="wallpaper_style_beauty">beauty</string>
    <string name="wallpaper_style_originality">originality</string>
    <string name="wallpaper_style_cartoon">cartoon</string>
    <string name="wallpaper_style_other">other</string>
    <string name="wallpaper_order">order：</string>
    <string name="order_time">recent update</string>
    <string name="download_num">hot download</string>
    <string name="no_more_data">no more</string>
    <string name="narrow_pic">narrow picture</string>
    <string name="wide_pic">wide picture</string>
    <string name="memory_erro">memory error</string>
    <string name="download_fail">download fail</string>
    <string name="live_wallpaper_picker_title" msgid="4811278937634144675">choose live wallpaper</string>
    <string name="live_wallpaper_picker_label" msgid="3218000114890071946">live wallpaper</string>
    <string name="live_wallpaper_preview_title" msgid="1130080613611954763">preview</string>
    <string name="configure_wallpaper" msgid="7396598925806288258">setting...</string>
    <string name="wallpaper_instructions" msgid="4215640646180727542">set wallpaper</string>
    <string name="live_wallpaper_empty" msgid="4278728108785853407">no data</string>
    <string name="set_live_wallpaper" msgid="2381437614949033266">set wallpaper</string>
    <string name="wallpaper_title_and_author" msgid="8891734217843935304">"<xliff:g id="TITLE">%1$s</xliff:g>author：<xliff:g id="AUTHOR">%2$s</xliff:g>"</string>
    <string name="live_wallpaper_loading" msgid="2488371303130330734">loading</string>
    <string name="wallpaper_cancel" msgid="7340240618834119228">cancel</string>
    <string name="update_self_forceDialog_title">update</string>
    <string name="update_self_forceDialog_content">force to update</string>
    <string name="update_self_dialog_confirm_btn">update</string>
    <string name="update_self_dialog_cancel_btn">cancel</string>
    <string name="update_networktip_title">network tip</string>
    <string name="update_self_networktip_content">this update will generate much mobile data, whether to continue (recommend WiFi)?</string>
    <string name="update_networktip_yes">continue</string>
    <string name="update_networktip_no">cancel</string>
    <string name="update_self_dialog_content">click to update</string>
    <string name="activity_not_found">application not found</string>
    <string name="update_self_dialog_title">update</string>
    <string name="is_applying_wallpaper">applying</string>
    <string name="delete_wallpaper_tips">sure to delete？</string>
    <string name="seven_theme">seven themes</string>
    <string name="wait_to_load">try after loading</string>
    <string name="share_lockscreen_message_left">This</string>
    <string name="share_lockscreen_message_right">I just downloaded a beautiful and unique picture as my lock screen,come on and see it!</string>
    <string name="share_theme_message_left">I just changed the theme </string>
    <string name="share_theme_message_right">I changed my Freeme OS theme,it is colorful and cool,you gotta try it.</string>
    <string name="share_wallpaper_message">Free nice home screen for your Freeme OS phone,check it out here</string>
    <string name="thememanager_title">theme</string>
    <string name="maybelike_no_data">check wlan\n&#160;&#160;click to refresh</string>
    <string name="no_data">check wlan</string>
    <string name="no_network">check wlan</string>
    <string name="no_connect">network error</string>
    <string name="no_connect_hint">no connect,try later</string>
    <string name="no_data_errors">cannot obtain the info</string>
    <string name="no_space_errors">no space left</string>
    <string name="get_data_error">connect error,try later</string>
    <string name="now_exceed_count">try later</string>
    <string name="now_downloading">in downloading</string>
    <string name="fileException">please download after deleting</string>
    <string name="cardException">no enough space or network error</string>
    <string name="Surplus">remained :</string>
    <string name="file_no_exsit">file not exist</string>
    <string name="detail_delete_title">delete theme</string>
    <string name="detail_delete_info">sure to delete?</string>
    <string name="detail_information">detail</string>
    <string name="theme_name">name:</string>
    <string name="producers">author:</string>
    <string name="size">size:</string>
    <string name="version">version:</string>
    <string name="download_count">download times:</string>
    <string name="clear_cache">clean cache</string>
    <string name="version_code">version code</string>
    <string name="current_version_code">current version：</string>
</resources>