<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/firstpage_ll"
    android:layout_width="@dimen/detail_preview_w"
    android:layout_height="@dimen/detail_preview_h"
    android:paddingTop="30dp"
    android:orientation="vertical"
    android:background="#000"
    android:gravity="center_horizontal" >
    <ImageView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_info"
        android:contentDescription="@null"/>
    <TextView
        android:id="@+id/test_tv" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/detail_information"/>
    <LinearLayout
        style="@style/firstpager_layout_style" 
        android:layout_marginTop="20dp">
        <TextView 
            style="@style/firstpager_tv_style"
            android:textColor="@android:color/white"
            android:text="@string/theme_name"/>
        <TextView 
            android:id="@+id/themename_tv"
            android:textColor="@android:color/white"
            style="@style/firstpager_tv_style"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/producers_layout"
        style="@style/firstpager_layout_style" >
        <TextView 
            style="@style/firstpager_tv_style"
            android:textColor="@android:color/white"
            android:text="@string/producers"/>
        <TextView 
            android:id="@+id/producers_tv"
            android:textColor="@android:color/white"
            style="@style/firstpager_tv_style"/>
    </LinearLayout>
    <LinearLayout
        style="@style/firstpager_layout_style" >
        <TextView 
            style="@style/firstpager_tv_style"
            android:textColor="@android:color/white"
            android:text="@string/size"/>
        <TextView 
            android:id="@+id/size_tv"
            android:textColor="@android:color/white"
            style="@style/firstpager_tv_style"/>
    </LinearLayout>
    <LinearLayout
        style="@style/firstpager_layout_style" >
        <TextView 
            style="@style/firstpager_tv_style"
            android:textColor="@android:color/white"
            android:text="@string/version"/>
        <TextView 
            android:id="@+id/version_tv"
            android:textColor="@android:color/white"
            style="@style/firstpager_tv_style"/>
    </LinearLayout>
    <LinearLayout
        style="@style/firstpager_layout_style" >
        <TextView 
            style="@style/firstpager_tv_style"
            android:textColor="@android:color/white"
            android:text="@string/download_count"/>
        <TextView 
            android:id="@+id/download_count_tv"
            style="@style/firstpager_tv_style"
            android:textColor="@android:color/white"/>
    </LinearLayout>  
</LinearLayout>