<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TextView android:layout_width="@dimen/search_type_area_width"
        android:layout_height="@dimen/search_height"
        android:gravity="center"
        android:text="@string/theme"/>
    
    <RelativeLayout android:layout_width="@dimen/search_type_area_width"
        android:layout_height="1px"
        android:background="@color/search_divider_color"/>
    
    <TextView android:layout_width="@dimen/search_type_area_width"
        android:layout_height="@dimen/search_height"
        android:gravity="center"
        android:text="@string/lockscreen"/>
    
    <RelativeLayout android:layout_width="@dimen/search_type_area_width"
        android:layout_height="1px"
        android:background="@color/search_divider_color"/>
    
    <TextView android:layout_width="@dimen/search_type_area_width"
        android:layout_height="@dimen/search_height"
        android:gravity="center"
        android:text="@string/wallpaper"/>
</LinearLayout>