<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="10.0dip"
    android:paddingTop="10.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/ResourceBrowser.ResourceProperty.Title"
            android:text="@string/description_file" />

        <TextView
            android:id="@+id/name"
            style="@style/ResourceBrowser.ResourceProperty.Content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/ResourceBrowser.ResourceProperty.Title"
            android:text="@string/description_dimension" />

        <TextView
            android:id="@+id/dimension"
            style="@style/ResourceBrowser.ResourceProperty.Content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/ResourceBrowser.ResourceProperty.Title"
            android:text="@string/description_size" />

        <TextView
            android:id="@+id/size"
            style="@style/ResourceBrowser.ResourceProperty.Content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/ResourceBrowser.ResourceProperty.Title"
            android:text="@string/description_uploadtime" />

        <TextView
            android:id="@+id/modifiedTime"
            style="@style/ResourceBrowser.ResourceProperty.Content" />
    </LinearLayout>

</LinearLayout>