<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/refresh_linearLayout_id"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="50dp"
    android:visibility="gone" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/no_data" />

    <TextView
        android:id="@+id/tip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12.0dip"
        android:text="@string/no_data"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#c6c6c6"
        android:textIsSelectable="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" >

        <Button
            android:id="@+id/set_wlan"
            android:layout_width="125dp"
            android:layout_height="39.5dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="38dp"
            android:text="@string/set" 
            android:background="@drawable/tab_wlan_button"
            android:textColor="@color/custom_color"/>

        <Button
            android:id="@+id/refresh"
            android:layout_width="125dp"
            android:layout_height="39.5dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="38dp"
            android:text="@string/refresh" 
            android:background="@drawable/tab_wlan_button"
            android:textColor="@color/custom_color"/>
    </LinearLayout>

</LinearLayout>