<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="10.0dip"
    android:paddingTop="10.0dip" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/ResourceBrowser.ResourceProperty.Title"
            android:textColor="@android:color/black"
            android:text="@string/description_name" />

        <TextView
            android:id="@+id/online_name"
            style="@style/ResourceBrowser.ResourceProperty.Content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/ResourceBrowser.ResourceProperty.Title"
            android:text="@string/description_download" />

        <TextView
            android:id="@+id/online_download"
            style="@style/ResourceBrowser.ResourceProperty.Content" />
    </LinearLayout>
    
    <!-- 
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/ResourceBrowser.ResourceProperty.Title"
            android:text="@string/description_size" />

        <TextView
            android:id="@+id/online_size"
            style="@style/ResourceBrowser.ResourceProperty.Content" />
    </LinearLayout>
	 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            style="@style/ResourceBrowser.ResourceProperty.Title"
            android:text="@string/description_uploadtime" />

        <TextView
            android:id="@+id/online_modifiedTime"
            style="@style/ResourceBrowser.ResourceProperty.Content" />
    </LinearLayout>

</LinearLayout>